// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <InspectorField> inside a Form 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
}

.emotion-1 {
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 24px;
  margin-bottom: 16px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  margin-left: 16px;
  margin-right: 16px;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-3.Mui-disabled {
  cursor: default;
}

.emotion-3 .MuiFormControlLabel-label.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
}

<form
    id="inspectorFieldForm.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 emotion-0"
    >
      <div
        class="MuiBox-root emotion-1"
      >
        <div
          class="MuiFormControl-root emotion-2"
        >
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop emotion-3"
          >
            <ol
              role="tree"
              style="padding: 0px; margin: 0px; list-style-type: none;"
            >
              <li
                aria-expanded="false"
                role="treeitem"
                style="color: black; background-color: white; line-height: 1.2; cursor: default; box-sizing: border-box; list-style: none; font-family: Menlo, monospace; font-size: 11px;"
              >
                <div>
                  <span
                    style="color: rgb(110, 110, 110); display: inline-block; font-size: 12px; margin-right: 3px; user-select: none; transform: rotateZ(0deg);"
                  >
                    ▶
                  </span>
                  <span
                    style="font-style: italic;"
                  />
                  <span
                    style="font-style: italic;"
                  >
                    {
                    <span>
                      <span
                        style="color: rgb(136, 19, 145);"
                      >
                        formId
                      </span>
                      : 
                      <span
                        style="color: rgb(196, 26, 22);"
                      >
                        "form"
                      </span>
                    </span>
                    , 
                    <span>
                      <span
                        style="color: rgb(136, 19, 145);"
                      >
                        submitCount
                      </span>
                      : 
                      <span
                        style="color: rgb(28, 0, 207);"
                      >
                        0
                      </span>
                    </span>
                    , 
                    <span>
                      <span
                        style="color: rgb(136, 19, 145);"
                      >
                        visited
                      </span>
                      : 
                      <span>
                        Object
                      </span>
                    </span>
                    , 
                    <span>
                      <span
                        style="color: rgb(136, 19, 145);"
                      >
                        touched
                      </span>
                      : 
                      <span>
                        Object
                      </span>
                    </span>
                    , 
                    <span>
                      <span
                        style="color: rgb(136, 19, 145);"
                      >
                        errors
                      </span>
                      : 
                      <span>
                        Object
                      </span>
                      <span>
                        …
                      </span>
                    </span>
                    }
                  </span>
                </div>
                <ol
                  role="group"
                  style="margin: 0px; padding-left: 12px;"
                />
              </li>
            </ol>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-4"
            >
              Example Editor
            </span>
          </label>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should render <InspectorField> inside a FormView 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);
}

.emotion-1 {
  margin: 8px;
  padding: 8px;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-5 {
  margin-bottom: 8px;
  padding: 8px;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  margin-left: 16px;
  margin-right: 16px;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-7.Mui-disabled {
  cursor: default;
}

.emotion-7 .MuiFormControlLabel-label.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
}

<form
    id="inspectorFieldFormView.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 emotion-0"
    >
      <div
        class="MuiBox-root emotion-1"
      >
        <div
          class="MuiBox-root emotion-2"
        >
          <div
            class="MuiGrid-root MuiGrid-container emotion-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item emotion-4"
            >
              <div
                class="MuiBox-root emotion-5"
              >
                <div
                  class="MuiFormControl-root emotion-6"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop emotion-7"
                  >
                    <ol
                      role="tree"
                      style="padding: 0px; margin: 0px; list-style-type: none;"
                    >
                      <li
                        aria-expanded="false"
                        role="treeitem"
                        style="color: black; background-color: white; line-height: 1.2; cursor: default; box-sizing: border-box; list-style: none; font-family: Menlo, monospace; font-size: 11px;"
                      >
                        <div>
                          <span
                            style="color: rgb(110, 110, 110); display: inline-block; font-size: 12px; margin-right: 3px; user-select: none; transform: rotateZ(0deg);"
                          >
                            ▶
                          </span>
                          <span
                            style="font-style: italic;"
                          />
                          <span
                            style="font-style: italic;"
                          >
                            {
                            <span>
                              <span
                                style="color: rgb(136, 19, 145);"
                              >
                                components
                              </span>
                              : 
                              <span>
                                Object
                              </span>
                            </span>
                            , 
                            <span>
                              <span
                                style="color: rgb(136, 19, 145);"
                              >
                                fields
                              </span>
                              : 
                              <span>
                                Object
                              </span>
                            </span>
                            , 
                            <span>
                              <span
                                style="color: rgb(136, 19, 145);"
                              >
                                sections
                              </span>
                              : 
                              <span>
                                Array(1)
                              </span>
                            </span>
                            , 
                            <span>
                              <span
                                style="color: rgb(136, 19, 145);"
                              >
                                formId
                              </span>
                              : 
                              <span
                                style="color: rgb(196, 26, 22);"
                              >
                                "form"
                              </span>
                            </span>
                            , 
                            <span>
                              <span
                                style="color: rgb(136, 19, 145);"
                              >
                                submitCount
                              </span>
                              : 
                              <span
                                style="color: rgb(28, 0, 207);"
                              >
                                0
                              </span>
                              <span>
                                …
                              </span>
                            </span>
                            }
                          </span>
                        </div>
                        <ol
                          role="group"
                          style="margin: 0px; padding-left: 12px;"
                        />
                      </li>
                    </ol>
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-8"
                    >
                      Example Editor
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
